--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "41slsp_network-central_package",
+  "name": "41SLSP_NETWORK-CENTRAL_PACKAGE",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,16 +10,16 @@
   "author": "Philipp Schulz, SLSP",
   "license": "ISC",
   "devDependencies": {
-    "slsp-i-button": "1.0.0",
-    "slsp-courier-info": "1.0.0",
-    "slsp-ill-signin-order-alert": "1.0.0",
-    "slsp-edit-personal-details": "1.0.0",
+    "primo-explore-eth-metagrid": "0.0.3",
     "prm-locations-after": "1.0.0",
+    "prm-personal-info-after": "1.0.0",
+    "prm-user-area-expandable-after": "1.0.0",
     "slsp-archives-htgi": "1.0.0",
     "slsp-archives-viewit": "1.0.0",
+    "slsp-courier-info": "1.0.0",
+    "slsp-edit-personal-details": "1.0.0",
     "slsp-http-intercept-requests": "1.0.0",
-    "prm-user-area-expandable-after": "1.0.0",
-    "prm-personal-info-after": "1.0.0"
-  },
-  "description": ""
+    "slsp-i-button": "1.0.0",
+    "slsp-ill-signin-order-alert": "1.0.0"
+  }
 }
