--- a/js/prm-fines-after/package.json
+++ b/js/prm-fines-after/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "prm-service-details-after",
+    "name": "prm-fines-after",
     "version": "1.0.0",
     "description": "",
-    "main": "prm-service-details-after.module.js",
+    "main": "prm-fines-after.module.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
